--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
                 </ul>
             </section>
             <section>
-                <span>
-                    <p><b>Meeting Agenda:</b></p>
-                    <ol>
-                        <li>Talk about any progress from previous meeting</li>
-                        <li>See if there is any problems that arose</li>
-                        <li>Talk about any new ideas for the game</li>
-                        <li>Try to see if we need new people to help</li>
-                        <li>Set up what is expected for next meeting</li>
-                    </ol>
-                </span>
+                <p><b><span>Meeting Agenda:</span></b></p>
+                <ol>
+                    <li>Talk about any progress from previous meeting</li>
+                    <li>See if there is any problems that arose</li>
+                    <li>Talk about any new ideas for the game</li>
+                    <li>Try to see if we need new people to help</li>
+                    <li>Set up what is expected for next meeting</li>
+                </ol>
             </section>
             <section>
                 <p><b><em>Information:</em></b></p>
