--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
     <head>
         <title>Meeting Minutes</title>
         <link rel="icon" type="image/png" href="wave.png"/>
+        <link rel="stylesheet" href="styleSheet.css"/>
         <meta name="author" content="Justin Lee">
         <meta name="application-name" content="Meeting Minutes">
         <meta name="description" content="A sample meeting minutes meeting">
+        <style>
+            h1 {
+                color: orange;
+            }
+        </style>
     </head>
     <body>
         <header>
             <div>
                 <h1>Game Development Meeting Minutes</h1>
-                <h2>Topic of Meeting: Brainstorming and Development</h2>
+                <h2 style="color: rgb(214, 122, 127);">Topic of Meeting: Brainstorming and Development</h2>
                 <h3>Date of Meeting: 10/3/2021</h3>
             </div>          
         </header>
@@ -60,6 +66,7 @@
                     we are trying to go for, if we have enough employees for game
                     development, and to see if there is a current trend in what video games
                     are selling right now. Here is a video on video game genres:
+                    <br>
                     <video width="320" height="240" controls>
                         <source src="video.mp4" type="video/mp4">
                     </video>
